force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__AgentWorkId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AgentWorkId__c</fullName>
    <label>Agent Work</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AgentWorkId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>