force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__AgentWorkSkill_SkillId_map_Skill_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__AgentWorkSkill_SkillId_map_Skill_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AgentWorkSkill_SkillId_map_Skill_Id_N_1</label>
    <referenceTo>ssot__Skill__dlm</referenceTo>
    <relationshipLabel>AgentWorkSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
    <relationshipName>AgentWorkSkill_SkillId_map_Skill_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>