force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__IsDropped__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDropped__c</fullName>
    <label>Dropped</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDropped</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>