force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__rel_1697761235701_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761235701_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationReason_ConversationReaso_rel</label>
    <referenceTo>ssot__Skill__dlm</referenceTo>
    <relationshipLabel>ConversationReason_ConversationReaso_rel</relationshipLabel>
    <relationshipName>rel_1697761235701_end</relationshipName>
    <type>Lookup</type>
</CustomField>