force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__SkillLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__SkillLevel__c</fullName>
    <label>Skill Level</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SkillLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>