force-app/main/default/objects/ssot__AgentWorkSkill__dlm/fields/ssot__SkillPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__SkillPriority__c</fullName>
    <label>Skill Priority</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SkillPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>